# portfolio

./: CNAME  README.md  index.html  pyproject.toml  requirements.txt  todos.json  todos_web.json
todo_cli/: __main__.py  cli.py  models.py  storage.py  web.py
todo_cli/static/: styles.css
todo_cli/templates/: base.html  edit.html  index.html
