[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-cli-simple"
version = "0.1.0"
description = "Simple JSON-backed to-do CLI"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
dependencies = []

[project.scripts]
todo = "todo_cli.cli:main"

